--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,6 +99,7 @@ header {
         height: auto;
         display: flex;
         align-items: center;
+        white-space: pre;
         // margin-left: -20px;
     }
 
